# lsf

./: .gitignore  .gitmodules  2.txt  AddGitSubmodule.cmake  CMakeLists.txt  LICENSE  README.md  analyse.cpp  analyse.h  compiler.pro  constant.h  error.cpp  error.h  fp.cpp  inner_imp.cpp  inner_imp.h  json.cpp  json.h  jsonparser.cpp  jsonparser.h  kmp.cpp  kmp.h  lexer.cpp  lexer.h  lsf.pro  main.cpp  mbuff.cpp  mbuff.h  test.cpp  xmake.lua
.github/workflows/: cmake.yml  windows.yml
d/: cfg1.txt  json
example/: xmake.lua
example/src/: main.cpp
src/: analyse.cpp  analyse.h  constant.h  error.cpp  error.h  inner_imp.cpp  inner_imp.h  json.cpp  json.h  jsonparser.cpp  jsonparser.h  lexer.cpp  lexer.h  mbuff.cpp  mbuff.h
src/inner/: error.h  json.h  mbuff.cpp
src/lsf/: xx.h
src/module/: json_m.ixx
src/module_impl/: analyze.cpp  analyze.cppm  analyze.ixx  json.ixx  json_i.cpp  json_i.ixx  json_m.cpp  json_m.ixx  json_src.cpp  json_src.cppm  jsonparser.cpp  lsf.util.ixx  parser_tree.cpp  parser_tree.cppm  parser_tree.ixx  tree_allocator.cpp
src/old/: analyse.h  error.cpp  inner_imp.h  json.cpp  jsonparser.cpp  jsonparser.h
src/public/: analyze.ixx  constant.ixx  error.ixx  inner_imp.ixx  json.ixx  json_src.ixx  json_use.h  jsonparser.ixx  lexer.ixx  mbuff.ixx  parser_tree.ixx  struct_help.ixx  tk_generator.ixx  tp.ixx  tree_builder.ixx  util.ixx  xx.h
src/public2/: analyze.ixx  constant.ixx  jsonparser.ixx  lexer.ixx  mbuff.ixx  parser_tree.ixx  struct_help.ixx  tk_generator.ixx  tp.ixx  tree_allocator.ixx
test/: 2.txt  22.txt  222.txt  hello.cpp  main.cpp  no_main.cpp  test.cpp  test_BST.cpp  test_allocator.cpp  test_jsonparser.cpp  test_usage.cpp  tt2.cpp  xmaketest.cpp
